apache2-deployment/configs/pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nordanalytics
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-nordanalytics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nordanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-nordanalytics
  template:
    metadata:
      labels:
        app: hello-nordanalytics
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
