apache2-deployment/configs/nord-analytics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nordanalytics
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - nordanalytics-app.104.248.101.72.nip.io
    secretName: hello-kubernetes-tls
  rules:
  - host: nordanalytics-app.104.248.101.72.nip.io 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-nordanalytics
            port:
              number: 80
